# haskell

./: .gitignore  Glossary.md  README.md
Chapters/: Glossary.md
Chapters/01Introduction/: Introduction.md
Chapters/03Strings/: Exercices.md
Chapters/04DataTypes/: Exercies.md
Chapters/05Types/: Exercises.md  Types.md
Chapters/06TypeClasses/: Exercises.md
Chapters/07FunctionalPatterns/: Exercises.md  FunctionalPatterns.md
Chapters/08Recursion/: Exercises.md
Chapters/09Lists/: Exercises.md  Lists.md
Chapters/10FoldingLists/: Exercises.md  FoldingLists.md
Chapters/11AlgebraicDatatypes/: AlgebraicDatatypes.md
Chapters/13BuildingProjects/: 13BuildingProjects.md  Exercises.md
Chapters/14Testing/: 14Testing.md  Exercises.md
Chapters/14Testing/Exercises/exercises/: exercises.cabal
Chapters/15MonoidandSemigroup/: 15MonoidsandSemigroup.md  Exercises.md
Chapters/16Functor/: 16Functor.md  exercises.md
Chapters/17Applicative/: 17Applicative.md  exercises.md
Chapters/18Monad/: 18Monad.md  exercises.md
Chapters/AlgebraicDatatypes/: AlgebraicDatatypes.md  Exercises.md
Chapters/DataTypes/: DataTypes.md
Chapters/FoldingLists/: Exercises.md
Chapters/GettingStarted/: GettingStarted.md
Chapters/Recursion/: Recursion.md
Chapters/SignalingAdversity/: Exercises.md  SignalingAdversity.md
Chapters/Strings/: Strings.md
Chapters/TypeClasses.md/: TypeClasses.md.md
Projects/hangman/: hangman.cabal
Projects/hangman/src/: Hangman.hs
